Enabled IPv6 wildcard listeners.

--- a/nginx.conf
+++ b/nginx.conf
@@ -26,6 +26,8 @@ http {
         server_name localhost;
         listen *:443 ssl;
         listen *:443 quic reuseport;
+        listen [::]:443 ssl;
+        listen [::]:443 quic reuseport;
         add_header Alt-Svc 'hq-29=":443"';
         location / {
             root /www;
