Updated configuration to match recent nginx changes.
 - The "quic" flag in listen is gone.
   Instead, "http3_hq" directive is used (enabled by NGX_HTTP_V3_HQ macro).

 - The "quic_initial_max_streams_bidi" directive is gone.
   Instead, "http3_max_concurrent_streams" directive should be used.
   Since default value is 128, it is no longer required in configuration.
   (previous default value was 16, what is too low)

- The ngx_http_quic_module is gone.
  Instead, ngx_http_v3_module is used.

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,16 +20,17 @@ http {
     ssl_early_data on;
     ssl_session_tickets on;
 
-    quic_initial_max_streams_bidi 100;
-
     keepalive_requests 5000;
 
     server {
         server_name localhost;
         listen *:443 ssl;
-        listen *:443 quic reuseport;
+        listen *:443 http3 reuseport;
         listen [::]:443 ssl;
-        listen [::]:443 quic reuseport;
+        listen [::]:443 http3 reuseport;
+
+        http3_hq on;
+
         add_header Alt-Svc 'hq-29=":443"';
         location / {
             root /www;
